Redesign layanan page with new icons and improved layout
Replaces overlay menu and old icon usage in layanan.html with a new grid layout using custom icons for each service. Adds new PNG icons for Kepegawaian and PSDM services, updates image and PDF resources, and adjusts CSS for the new layout. Also updates index.html to use a new header image and removes unused overlay CSS.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 <div class="header">
-	<img src="images/HomeHeader.jpg" width="100%" alt="Banner Home">
+	<img src="images/HomeHeaderSS.jpg" width="100%" alt="Banner Home">
   <!--<p><img src="icon/MeranginLogo.png" height="100"/></p>
   <img src="icon/BKPLogo.png" height="50"/>
   <h1>SELAMAT DATANG</h1>
