--- a/layanan.html
+++ b/layanan.html
@@ -85,102 +85,104 @@
 </div>
 	
 <!------------------------------------------ CONTENT ----------------------------------->
-<div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-	<div class="overlay-content">
-		<img src="images/LayananKPG/Slide1.PNG"  alt="syaratKarpeg">
-	</div>
-</div>
 
 <div class="layananBKD">
 
-	<h1 class="layananKPG">Layanan Kepegawaian <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
-	
-	<div class="flex-container">
+    <h1 class="layananKPG">Layanan Kepegawaian <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
+    
+    <div class="flex-container">
 
-		<div class="flex-item-one" onclick="openNav()"><p><a href="" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KARTU PEGAWAI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/karpeg.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/karpeg.png" width="100"></a><br>KARTU PEGAWAI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KARTU SUAMI/ISTRI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+        <p><a href="/images/LayananKPG/karsu.PNG" target="_blank" >
+        <img src="icon/Kepegawaian/karsu.png" width="100px"></a><br>KARTU SUAMI/ISTRI<br><sub>Persyaratan Pembuatan Karsu/Karsi</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KENAIKAN GAJI BERKALA<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/gajiBerkala.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/gaji.png" width="100px"></a><br>GAJI BERKALA<br><sub>Persyaratan Pengajuan Kenaikan Gaji Berkala</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KENAIKAN JABATAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/jabatanPelaksana.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/pelaksana.png"width="100px"></a><br>KENAIKAN JABATAN PELAKSANA<br><sub>Persyaratan Kenaikan Jabatan Pelaksana</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>MUTASI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/jabatanFungsi.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/fungsional.png" width="100px"></a><br>KENAIKAN JABATAN FUNGSIONAL<br><sub>Persyaratan Kenaikan Jabatan Fungsional</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KENAIKAN PANGKAT<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/mutasi.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/mutasi.png" width="100px"></a><br>MUTASI<br><sub>Persyaratan Permohonan Mutasi</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PEMAKAIAN GELAR PENDIDIKAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/PERSYARATAN KENAIKAN PANGKAT 2025.pdf" target="_blank" >
+            <img src="icon/Kepegawaian/kp.png" width="100px"></a><br>KENAIKAN PANGKAT<br><sub>Persyaratan Kenaikan Pangkat</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENINJAUAN MASA KERJA (PMK)<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/gelarPendidikan.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/gelar.png" width="100px"></a><br>PEMAKAIAN GELAR PENDIDIKAN<br><sub>Persyaratan Pemakaian Gelar Pendidikan PNS</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENSIUN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/pmk.PNG" target="_blank" >
+            <img src="icon/Kepegawaian/pmk.png" width="100px"></a><br>PENINJAUAN MASA KERJA (PMK)<br><sub>Persyaratan Peninjauan Masa Kerja</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENSIUN JANDA/DUDA<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main">
+            <p><a href="/images/LayananKPG/SYARAT PENSIUN.pdf" target="_blank" >
+            <img src="icon/Kepegawaian/pensiun.png" width="100px"></a><br>PENSIUN<br><sub>Persyaratan Pengajuan Pensiun</sub></p>
+        </div>
+    </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENSIUN ATAS PERMINTAAN SENDIRI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
-	</div>
+    <h1 class="layananPSDM">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
+    <div class="flex-container">
 
-	<h1 class="layananPSDM">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
-	<div class="flex-container">
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/taspen.png" width="100px"></a><br>TASPEN<br><sub>Persyaratan Pengajuan Tabungan Asuransi Pegawai Negeri</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>TASPEN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/cerai.png" width="100px"></a><br>IZIN PERCERAIAN<br><sub>Permohonan Pengajuan Izin Cerai</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>IZIN PERCERAIAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/tubel.png" width="100px"></a><br>TUGAS BELAJAR<br><sub>Permohonan Pengajuan Tubel</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>TUGAS BELAJAR<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/satya.png" width="100px"></a><br>PENGUSULAN SATYA LENCANA<br><sub>Persyaratan Permohonan Satya Lencana</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENGUSULAN SATYA LENCANA<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/bersalin.png" width="100px"></a><br>CUTI BERSALIN<br><sub>Permohonan Cuti Melahirkan</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI BERSALIN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/besar.png" width="100px"></a><br>CUTI BESAR<br><sub>Permohonan Cuti Besar</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI BESAR<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/sakit.png" width="100px"></a><br>CUTI SAKIT/ALASAN PENTING<br><sub>Permohonan Cuti Sakit/Alasan Penting</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI SAKIT/ALASAN PENTING<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
+        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/PSDM/tahunan.png" width="100px"></a><br>CUTI TAHUNAN<br><sub>Permohonan Cuti Tahunan</sub></p>
+        </div>
 
-		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI TAHUNAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
-		</div>
-
-	</div>
+    </div>
 
 </div>
+
+
 <div class="layananBKN">
 
 	<h1>Layanan <img src="icon/BKN/LogoBKN.png" class="LogoBKN" style="vertical-align:middle"></h1>
@@ -217,7 +219,7 @@
 
 	</div>
 
-</div>	
+</div>
 
 <!------------------- FOOTER ----------------------------------->	
 	
@@ -274,7 +276,7 @@
     .then(count => {
       document.getElementById("visitor-count").innerText = count;
     });
-</script>
+</script> -->
 	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
@@ -288,6 +290,6 @@ function openNav() {
 function closeNav() {
   document.getElementById("myNav").style.height = "0%";
 }
-</script>	
+</script>
 </body>
 </html>
