Update layanan icons and content for PSDM section
Added new icons for 'diklat', 'disiplin', and 'ujiandinas' in the PSDM section. Updated layanan.html to use these new icons and revised the corresponding labels and descriptions. Adjusted image opacity in layanan.css for improved visibility.

--- a/layanan.html
+++ b/layanan.html
@@ -163,19 +163,19 @@
         </div>
 
         <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
-        <img src="icon/PSDM/bersalin.png" width="100px"></a><br>CUTI BERSALIN<br><sub>Permohonan Cuti Melahirkan</sub></p>
+        <img src="icon/PSDM/disiplin.png" width="100px"></a><br>HUKUMAN DISIPLIN<br><sub>Permohonan Bebas Hukuman Disiplin</sub></p>
         </div>
 
         <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
-        <img src="icon/PSDM/besar.png" width="100px"></a><br>CUTI BESAR<br><sub>Permohonan Cuti Besar</sub></p>
+        <img src="icon/PSDM/ujiandinas.png" width="100px"></a><br>UJIAN DINAS<br><sub>Permohonan Mengikuti Ujian Dinas</sub></p>
         </div>
 
         <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
-        <img src="icon/PSDM/sakit.png" width="100px"></a><br>CUTI SAKIT/ALASAN PENTING<br><sub>Permohonan Cuti Sakit/Alasan Penting</sub></p>
+        <img src="icon/PSDM/sakit.png" width="100px"></a><br>CUTI<br><sub>Permohonan Cuti</sub></p>
         </div>
 
         <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
-        <img src="icon/PSDM/tahunan.png" width="100px"></a><br>CUTI TAHUNAN<br><sub>Permohonan Cuti Tahunan</sub></p>
+        <img src="icon/PSDM/diklat.png" width="100px"></a><br>DIKLAT<br><sub>Permohonan Pengajuan Diklat</sub></p>
         </div>
 
     </div>
