Add new pages and update info grafis and layanan
Added galeri.html, pengumuman.html, ppid.html, and pengumuman.css for new sections. Updated index.html to use new InfoGrafis images and expanded the 'Sekapur Sirih' section. Updated layanan.html with new links and improved image sizes. Replaced images in images/InfoGrafis, removed images/index_pict, and added a new PDF for Satyalancana requirements. Minor CSS adjustments for layout and text alignment.

--- a/index.html
+++ b/index.html
@@ -96,20 +96,29 @@
 
 <div class="infoGrafis">
 	<h2>INFO GRAFIS</h2>
-	<img class="mySlides" src="images/index_pict/1.jpg">
-	<img class="mySlides" src="images/index_pict/2.jpg">
-	<img class="mySlides" src="images/index_pict/3.jpg">
-	<img class="mySlides" src="images/index_pict/4.jpg">
-	<img class="mySlides" src="images/index_pict/5.jpg">
+	<img class="mySlides" src="images/InfoGrafis/1.jpg">
+	<img class="mySlides" src="images/InfoGrafis/2.jpg">
+	<img class="mySlides" src="images/InfoGrafis/3.jpg">
+	<img class="mySlides" src="images/InfoGrafis/4.jpg">
+	<img class="mySlides" src="images/InfoGrafis/5.jpg">
+	<img class="mySlides" src="images/InfoGrafis/6.jpg">
+	<img class="mySlides" src="images/InfoGrafis/7.jpg">
+	<img class="mySlides" src="images/InfoGrafis/8.jpg">
+	<img class="mySlides" src="images/InfoGrafis/9.jpg">
+	<img class="mySlides" src="images/InfoGrafis/10.jpg">
 </div>
 
 <div class="pidato-kaban">
 	<h2> Sekapur Sirih<br><p>Kepala BKPSDMD Kabupaten Merangin</p></h2>
 	<img src="images/Foto_Kaban.png" alt="Foto Kaban">
 	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
-	<p></p>
-	<p></p>
+	<p>Puji syukur kita panjatkan ke hadirat Allah SWT, karena atas rahmat dan karunia-Nya, Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah Kabupaten Merangin dapat meluncurkan Website Resmi BKPSDM Kabupaten Merangin sebagai salah satu sarana informasi dan pelayanan publik.</p>
+	<p>Peluncuran website ini merupakan wujud komitmen kami dalam meningkatkan kualitas layanan kepegawaian serta pengembangan sumber daya aparatur secara lebih transparan, efektif, dan mudah diakses oleh seluruh ASN maupun masyarakat. Melalui platform ini, kami berharap seluruh informasi terkait kepegawaian, pengembangan kompetensi, maupun layanan administrasi dapat tersampaikan dengan lebih cepat, akurat, dan terbuka.</p>
+	<p>Website ini juga menjadi langkah nyata dalam mendukung transformasi digital pemerintah daerah, sejalan dengan tuntutan era teknologi informasi yang semakin maju. Kami meyakini, dengan adanya media layanan berbasis digital ini, BKPSDM Kabupaten Merangin akan mampu memberikan pelayanan yang lebih prima, modern, serta menjawab kebutuhan ASN dan masyarakat dengan lebih baik.</p>
+	<p>Akhir kata, kami mengajak seluruh ASN dan masyarakat untuk memanfaatkan website ini sebaik-baiknya, serta memberikan masukan demi peningkatan kualitas layanan BKPSDM di masa yang akan datang.</p>
 	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
+	<p>Merangin, 26 Agustus 2025<br>Kepala BKPSDM Kabupaten Merangin<br><b>H. Ferdi Firdaus Ansori, S.Sos., M.E.</b></p>
+	
 	
 </div>
 	
@@ -123,8 +132,12 @@
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-			<div class="chart-gender-asn">
+			<div class="chart-gender-pns">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%202&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
+
+			<div class="chart-gender-pppk">
+			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%201&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
 			<div class="chart-age-asn">
@@ -139,16 +152,16 @@
 			<iframe width="327" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%207&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-			<div class="chart-ese-asn">
-			<iframe width="326" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%208&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
-			</div>
-			
 			<div class="chart-kp-asn">
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2011&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
 			<div class="chart-jab-asn">
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2010&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+			</div>
+
+			<div class="chart-ese-asn">
+			<iframe width="326" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%208&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
 		<!--<canvas class="flex-item-half1" style="max-width:325px"></canvas>
