--- a/layanan.html
+++ b/layanan.html
@@ -146,35 +146,35 @@
     <h1 class="layananPSDM">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
     <div class="flex-container">
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="" target="_blank" >
         <img src="icon/PSDM/taspen.png" width="100px"></a><br>TASPEN<br><sub>Persyaratan Pengajuan Tabungan Asuransi Pegawai Negeri</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="" target="_blank" >
         <img src="icon/PSDM/cerai.png" width="100px"></a><br>IZIN PERCERAIAN<br><sub>Permohonan Pengajuan Izin Cerai</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfpoV6Utd9lg3KWp-nV3JX29kooy4i-g3liowmISEnUAvUMCg/viewform" target="_blank" >
         <img src="icon/PSDM/tubel.png" width="100px"></a><br>TUGAS BELAJAR<br><sub>Permohonan Pengajuan Tubel</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
-        <img src="icon/PSDM/satya.png" width="100px"></a><br>PENGUSULAN SATYA LENCANA<br><sub>Persyaratan Permohonan Satya Lencana</sub></p>
+        <div class="flex-item-main"><p><a href="/images/LayananPSDM/Persyaratan Bahan Usulan Satyalancana.pdf" target="_blank" >
+        <img src="icon/PSDM/satya.png" width="100px"></a><br>PENGUSULAN SATYALANCANA<br><sub>Persyaratan Permohonan Satya Lencana</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="" target="_blank" >
         <img src="icon/PSDM/disiplin.png" width="100px"></a><br>HUKUMAN DISIPLIN<br><sub>Permohonan Bebas Hukuman Disiplin</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="" target="_blank" >
         <img src="icon/PSDM/ujiandinas.png" width="100px"></a><br>UJIAN DINAS<br><sub>Permohonan Mengikuti Ujian Dinas</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="https://bioqu.id/SICUTI" target="_blank" >
         <img src="icon/PSDM/sakit.png" width="100px"></a><br>CUTI<br><sub>Permohonan Cuti</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <div class="flex-item-main"><p><a href="" target="_blank" >
         <img src="icon/PSDM/diklat.png" width="100px"></a><br>DIKLAT<br><sub>Permohonan Pengajuan Diklat</sub></p>
         </div>
 
@@ -194,27 +194,27 @@
 		</div>
 
 		<div class="flex-item-two"><p><a href="https://myasn.bkn.go.id/" target="_blank" class="myasn">
-		<img src="icon/BKN/MyASN.png" alt="Logo BKN" width="100px"></a><br>MyASN BKN<br><sub>Sistem Kepegawaian Bagi ASN</sub></p>
+		<img src="icon/BKN/MyASN.png" alt="Logo BKN" width="150px"></a><br>MyASN BKN<br><sub>Sistem Kepegawaian Bagi ASN</sub></p>
 		</div>
 
 		<div class="flex-item-three"><p><a href="https://kinerja.bkn.go.id/" target="_blank" class="ekinerja">
-		<img src="icon/BKN/E-Kinerja.png" alt="Logo BKN" width="100px"></a><br>E-KINERJA BKN<br><sub>Sistem Penilaian Kinerja BKN</sub></p>
+		<img src="icon/BKN/E-Kinerja.png" alt="Logo BKN" width="150px"></a><br>E-KINERJA BKN<br><sub>Sistem Penilaian Kinerja BKN</sub></p>
 		</div>
 
 		<div class="flex-item-four"><p><a href="https://siasn-instansi.bkn.go.id/" target="_blank" class="siasn">
-		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>SIASN BKN<br><sub>Sistem Informasi ASN Pemerintah Daerah</sub></p>
+		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="150px"></a><br>SIASN BKN<br><sub>Sistem Informasi ASN Pemerintah Daerah</sub></p>
 		</div>
 
 		<div class="flex-item-one"><p><p><a href="https://perencanaan-siasn.bkn.go.id/" target="_blank" class="hrsiasn">
-		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>HR SIASN<br><sub>Perencanaan Kebutuhan ASN</sub></p>
+		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="150px"></a><br>HR SIASN<br><sub>Perencanaan Kebutuhan ASN</sub></p>
 		</div>
 
 		<div class="flex-item-two"><p><a href="https://imut.bkn.go.id/" target="_blank" class="imutbkn">
-		<img src="icon/BKN/IMut.png" alt="Logo BKN" width="100px"></a><br>I-MUT BKN<br><sub>Integrasi Mutasi ASN</sub></p>
+		<img src="icon/BKN/IMut.png" alt="Logo BKN" width="150px"></a><br>I-MUT BKN<br><sub>Integrasi Mutasi ASN</sub></p>
 		</div>
 
 		<div class="flex-item-three"><p><a href="https://sscasn.bkn.go.id/" target="_blank" class="imutbkn">
-		<img src="icon/BKN/SSCASN.png" alt="Logo BKN" width="100px"></a><br>SSCASN BKN<br><sub>Sistem Seleksi Calon Aparatur Sipil Negara</sub></p>
+		<img src="icon/BKN/SSCASN.png" alt="Logo BKN" width="150px"></a><br>SSCASN BKN<br><sub>Sistem Seleksi Calon Aparatur Sipil Negara</sub></p>
 		</div>
 
 	</div>
