Replace header image with autoplaying video
Updated index.html to use a looping, muted video (HeaderVideo.mp4) in the header section instead of a static image. Added the video file to the videos directory.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
 <body>
 <div class="header">
-	<img src="images/HomeHeaderSS.jpg" width="100%" alt="Banner Home">
-  <!--<p><img src="icon/MeranginLogo.png" height="100"/></p>
+	<video src="/videos/HeaderVideo.mp4" width="100%" autoplay muted loop id="myVideo"></video>
+	<!--<img src="images/HomeHeaderSS.jpg" width="100%" alt="Banner Home">
+  <p><img src="icon/MeranginLogo.png" height="100"/></p>
   <img src="icon/BKPLogo.png" height="50"/>
   <h1>SELAMAT DATANG</h1>
 	<h2>DI PORTAL RESMI </h2>
