Update layanan and icons for TAPERA and related info
Replaced taspen.png with tapera.png and updated layanan.html to reflect TAPERA instead of TASPEN. Modified several service links and descriptions for clarity and accuracy, including updating URLs and subtexts. Adjusted font size in layanan.css and made a minor HTML structure change in index.html.

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 			<div class="chart-gender-pppk">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%201&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
-			
+			<p><br>
 			<div class="chart-age-asn">
 			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%205&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
-			</div>
+			</div></p>
 			
 			<div class="chart-edu-asn">
 			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%209&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
