--- a/layanan.html
+++ b/layanan.html
@@ -93,18 +93,18 @@
     <div class="flex-container">
 
         <div class="flex-item-main">
-            <p><a href="/images/LayananKPG/karpeg.PNG" target="_blank" >
-            <img src="icon/Kepegawaian/karpeg.png" width="100"></a><br>KARTU PEGAWAI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+            <p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+            <img src="icon/Kepegawaian/karpeg.png" width="100"></a><br>KARTU PEGAWAI<br><sub>Pembuatan Karpeg</sub></p>
         </div>
 
         <div class="flex-item-main">
-        <p><a href="/images/LayananKPG/karsu.PNG" target="_blank" >
-        <img src="icon/Kepegawaian/karsu.png" width="100px"></a><br>KARTU SUAMI/ISTRI<br><sub>Persyaratan Pembuatan Karsu/Karsi</sub></p>
+        <p><a href="https://asndigital.bkn.go.id/" target="_blank" >
+        <img src="icon/Kepegawaian/karsu.png" width="100px"></a><br>KARTU SUAMI/ISTRI<br><sub>Pembuatan Karsu/Karsi</sub></p>
         </div>
 
         <div class="flex-item-main">
             <p><a href="/images/LayananKPG/gajiBerkala.PNG" target="_blank" >
-            <img src="icon/Kepegawaian/gaji.png" width="100px"></a><br>GAJI BERKALA<br><sub>Persyaratan Pengajuan Kenaikan Gaji Berkala</sub></p>
+            <img src="icon/Kepegawaian/gaji.png" width="100px"></a><br>GAJI BERKALA<br><sub>Persyaratan Kenaikan Gaji Berkala</sub></p>
         </div>
 
         <div class="flex-item-main">
@@ -147,7 +147,7 @@
     <div class="flex-container">
 
         <div class="flex-item-main"><p><a href="" target="_blank" >
-        <img src="icon/PSDM/taspen.png" width="100px"></a><br>TASPEN<br><sub>Persyaratan Pengajuan Tabungan Asuransi Pegawai Negeri</sub></p>
+        <img src="icon/PSDM/tapera.png" width="100px"></a><br>TAPERA<br><sub>Permohonan Pengajuan TAPERA</sub></p>
         </div>
 
         <div class="flex-item-main"><p><a href="" target="_blank" >
@@ -158,8 +158,8 @@
         <img src="icon/PSDM/tubel.png" width="100px"></a><br>TUGAS BELAJAR<br><sub>Permohonan Pengajuan Tubel</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="/images/LayananPSDM/Persyaratan Bahan Usulan Satyalancana.pdf" target="_blank" >
-        <img src="icon/PSDM/satya.png" width="100px"></a><br>PENGUSULAN SATYALANCANA<br><sub>Persyaratan Permohonan Satya Lencana</sub></p>
+        <div class="flex-item-main"><p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeP28qWj-p13n_71Uc4OgocsIH5tvFv5AoroTAl4BKuSSfUQw/viewform" target="_blank" >
+        <img src="icon/PSDM/satya.png" width="100px"></a><br>SATYALANCANA<br><sub>Permohonan Usul Satyalancana</sub></p>
         </div>
 
         <div class="flex-item-main"><p><a href="" target="_blank" >
@@ -167,7 +167,7 @@
         </div>
 
         <div class="flex-item-main"><p><a href="" target="_blank" >
-        <img src="icon/PSDM/ujiandinas.png" width="100px"></a><br>UJIAN DINAS<br><sub>Permohonan Mengikuti Ujian Dinas</sub></p>
+        <img src="icon/PSDM/ujiandinas.png" width="100px"></a><br>UJIAN DINAS<br><sub>Informasi Mengenai Ujian Dinas</sub></p>
         </div>
 
         <div class="flex-item-main"><p><a href="https://bioqu.id/SICUTI" target="_blank" >
@@ -175,7 +175,7 @@
         </div>
 
         <div class="flex-item-main"><p><a href="" target="_blank" >
-        <img src="icon/PSDM/diklat.png" width="100px"></a><br>DIKLAT<br><sub>Permohonan Pengajuan Diklat</sub></p>
+        <img src="icon/PSDM/diklat.png" width="100px"></a><br>DIKLAT<br><sub>Informasi Mengenai Diklat</sub></p>
         </div>
 
     </div>
