--- a/layanan.html
+++ b/layanan.html
@@ -13,6 +13,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+<link href="/CSS/topnav.css" rel="stylesheet" type="text/css">
+<link href="/CSS/footer.css" rel="stylesheet" type="text/css">
 <link href="layanan.css" rel="stylesheet" type="text/css">
 
 <title>BKPSDMD Kabupaten Merangin</title>
@@ -48,7 +50,7 @@
 		  </div>
 		</div>
 		
-		<a href="layanan.html" class="active">LAYANAN</a>
+		<a href="layanan.html">LAYANAN</a>
 		
 		<div class="dropdown">
 			<button onclick="toggleDropdown('menu3')" class="dropbtn">TRANSPARANSI <i class="fa fa-caret-down"></i></button>
@@ -109,7 +111,7 @@
 
         <div class="flex-item-main">
             <p><a href="/images/LayananKPG/jabatanPelaksana.PNG" target="_blank" >
-            <img src="icon/Kepegawaian/pelaksana.png"width="100px"></a><br>KENAIKAN JABATAN PELAKSANA<br><sub>Persyaratan Kenaikan Jabatan Pelaksana</sub></p>
+            <img src="icon/Kepegawaian/pelaksana.png"width="100px"></a><br>MUTASI JABATAN PELAKSANA<br><sub>Persyaratan Kenaikan Jabatan Pelaksana</sub></p>
         </div>
 
         <div class="flex-item-main">
@@ -146,11 +148,11 @@
     <h1 class="layananPSDM">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
     <div class="flex-container">
 
-        <div class="flex-item-main"><p><a href="" target="_blank" >
+        <div class="flex-item-main"><p><a href="#" target="_blank" >
         <img src="icon/PSDM/tapera.png" width="100px"></a><br>TAPERA<br><sub>Permohonan Pengajuan TAPERA</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="" target="_blank" >
+        <div class="flex-item-main"><p><a href="#" target="_blank" >
         <img src="icon/PSDM/cerai.png" width="100px"></a><br>IZIN PERCERAIAN<br><sub>Permohonan Pengajuan Izin Cerai</sub></p>
         </div>
 
@@ -162,11 +164,11 @@
         <img src="icon/PSDM/satya.png" width="100px"></a><br>SATYALANCANA<br><sub>Permohonan Usul Satyalancana</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="" target="_blank" >
+        <div class="flex-item-main"><p><a href="#" target="_blank" >
         <img src="icon/PSDM/disiplin.png" width="100px"></a><br>HUKUMAN DISIPLIN<br><sub>Permohonan Bebas Hukuman Disiplin</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="" target="_blank" >
+        <div class="flex-item-main"><p><a href="#" target="_blank" >
         <img src="icon/PSDM/ujiandinas.png" width="100px"></a><br>UJIAN DINAS<br><sub>Informasi Mengenai Ujian Dinas</sub></p>
         </div>
 
@@ -174,7 +176,7 @@
         <img src="icon/PSDM/sakit.png" width="100px"></a><br>CUTI<br><sub>Permohonan Cuti</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="" target="_blank" >
+        <div class="flex-item-main"><p><a href="#" target="_blank" >
         <img src="icon/PSDM/diklat.png" width="100px"></a><br>DIKLAT<br><sub>Informasi Mengenai Diklat</sub></p>
         </div>
 
